# pidgeot

./: .clang-format  .clang-tidy  .cmake-format.yaml  CMakeLists.txt  Makefile  README.md
cmake/: BuildSystemChecks.cmake  setTargetOutputDirectories.cmake
src/: CMakeLists.txt  main.cpp  main.h  measurement.cpp  measurement.h  solver.h  state.h  utils.cpp  utils.h
src/2d_rotation_sync/: CMakeLists.txt  main.cpp  sample_measurements.cpp  sample_measurements.h  sample_states.cpp  sample_states.h
src/happly/: CMakeLists.txt  test.cpp
src/pidgeot/: CMakeLists.txt  dogLegSolver.cpp  dogLegSolver.h  gaussNewtonSolver.cpp  gaussNewtonSolver.h  linearSystem.cpp  linearSystem.h  measurement.cpp  measurement.h  solver.h  state.h  steepestDescentSolver.cpp  steepestDescentSolver.h  utils.cpp
src/utils/: numbers.h  timer.h
